--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ajv": "^8.11.0",
+    "ajv-errors": "^3.0.0",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
