--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon bin/www"
   },
   "dependencies": {
     "ajv": "^8.11.0",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
     "path": "^0.12.7"
   }
 }
